tests/baselines/reference/nodeModulesConditionalPackageExports(module=node16).errors.txt
error TS2209: The project root is ambiguous, but is required to resolve export map entry '.' in file 'package.json'. Supply the `rootDir` compiler option to disambiguate.
index.cts(3,22): error TS1479: The current file is a CommonJS module whose imports will produce 'require' calls; however, the referenced file is an ECMAScript module and cannot be imported with 'require'. Consider writing a dynamic 'import("package/mjs")' call instead.
index.cts(4,23): error TS1479: The current file is a CommonJS module whose imports will produce 'require' calls; however, the referenced file is an ECMAScript module and cannot be imported with 'require'. Consider writing a dynamic 'import("package")' call instead.
node_modules/inner/index.d.mts(2,13): error TS2303: Circular definition of import alias 'cjs'.
node_modules/inner/index.d.ts(2,13): error TS2303: Circular definition of import alias 'cjs'.


!!! error TS2209: The project root is ambiguous, but is required to resolve export map entry '.' in file 'package.json'. Supply the `rootDir` compiler option to disambiguate.
==== index.ts (0 errors) ====
    // esm format file
    import * as cjs from "package/cjs";
    import * as mjs from "package/mjs";
    import * as type from "package";
    cjs;
    mjs;
    type;
    import * as cjsi from "inner/a";
    import * as mjsi from "inner/b";
    import * as typei from "inner";
    import * as ts from "inner/types";
    cjsi.mjsSource;
    mjsi.mjsSource;
    typei.mjsSource;
    ts.mjsSource;
==== index.mts (0 errors) ====
    // esm format file
    import * as cjs from "package/cjs";
    import * as mjs from "package/mjs";
    import * as type from "package";
    cjs;
    mjs;
    type;
    import * as cjsi from "inner/a";
    import * as mjsi from "inner/b";
    import * as typei from "inner";
    import * as ts from "inner/types";
    cjsi.mjsSource;
    mjsi.mjsSource;
    typei.mjsSource;
    ts.mjsSource;
==== index.cts (2 errors) ====
    // cjs format file
    import * as cjs from "package/cjs";
    import * as mjs from "package/mjs";
                         ~~~~~~~~~~~~~
!!! error TS1479: The current file is a CommonJS module whose imports will produce 'require' calls; however, the referenced file is an ECMAScript module and cannot be imported with 'require'. Consider writing a dynamic 'import("package/mjs")' call instead.
    import * as type from "package";
                          ~~~~~~~~~
!!! error TS1479: The current file is a CommonJS module whose imports will produce 'require' calls; however, the referenced file is an ECMAScript module and cannot be imported with 'require'. Consider writing a dynamic 'import("package")' call instead.
    cjs;
    mjs;
    type;
    import * as cjsi from "inner/a";
    import * as mjsi from "inner/b";
    import * as typei from "inner";
    import * as ts from "inner/types";
    cjsi.cjsSource;
    mjsi.cjsSource;
    typei.implicitCjsSource;
    ts.cjsSource;
==== node_modules/inner/index.d.ts (1 errors) ====
    // cjs format file
    import * as cjs from "inner/a";
                ~~~
!!! error TS2303: Circular definition of import alias 'cjs'.
    import * as mjs from "inner/b";
    import * as type from "inner";
    import * as ts from "inner/types";
    export { cjs };
    export { mjs };
    export { type };
    export { ts };
    export const implicitCjsSource = true;
==== node_modules/inner/index.d.mts (1 errors) ====
    // esm format file
    import * as cjs from "inner/a";
                ~~~
!!! error TS2303: Circular definition of import alias 'cjs'.
    import * as mjs from "inner/b";
    import * as type from "inner";
    import * as ts from "inner/types";
    export { cjs };
    export { mjs };
    export { type };
    export { ts };
    export const mjsSource = true;
==== node_modules/inner/index.d.cts (0 errors) ====
    // cjs format file
    import * as cjs from "inner/a";
    import * as mjs from "inner/b";
    import * as type from "inner";
    import * as ts from "inner/types";
    export { cjs };
    export { mjs };
    export { type };
    export { ts };
    export const cjsSource = true;
==== package.json (0 errors) ====
    {
        "name": "package",
        "private": true,
        "type": "module",
        "exports": {
            "./cjs": "./index.cjs",
            "./mjs": "./index.mjs",
            ".": "./index.js"
        }
    }
==== node_modules/inner/package.json (0 errors) ====
    {
        "name": "inner",
        "private": true,
        "exports": {
            "./a": {
                "require": "./index.cjs",
                "node": "./index.mjs"
            },
            "./b": {
                "import": "./index.mjs",
                "node": "./index.cjs"
            },
            ".": {
                "import": "./index.mjs",
                "node": "./index.js"
            },
            "./types": {
                "types": {
                    "import": "./index.d.mts",
                    "require": "./index.d.cts",
                },
                "node": {
                    "import": "./index.mjs",
                    "require": "./index.cjs"
                }
            }
        }
    }